fix spacing between grid and submit

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,6 +1,6 @@
 .listContainer {
   width: 100%;
-  min-height: 75vh;
+  min-height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
