--- a/src/components/Submit/Submit.css
+++ b/src/components/Submit/Submit.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
+    height: 20vh;
 }
 
 .submitButton {
